; ModuleID = '/home/carl/AnghaBench/nanomsg/tests/extr_pair.c_main.c'
source_filename = "/home/carl/AnghaBench/nanomsg/tests/extr_pair.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AF_SP = common dso_local global i32 0, align 4
@NN_PAIR = common dso_local global i32 0, align 4
@SOCKET_ADDRESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"ABC\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"DEF\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %4 = load i32, i32* @AF_SP, align 4
  %5 = load i32, i32* @NN_PAIR, align 4
  %6 = call i32 @test_socket(i32 %4, i32 %5)
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @SOCKET_ADDRESS, align 4
  %9 = call i32 @test_bind(i32 %7, i32 %8)
  %10 = load i32, i32* @AF_SP, align 4
  %11 = load i32, i32* @NN_PAIR, align 4
  %12 = call i32 @test_socket(i32 %10, i32 %11)
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @SOCKET_ADDRESS, align 4
  %15 = call i32 @test_connect(i32 %13, i32 %14)
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @test_send(i32 %16, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %18 = load i32, i32* %2, align 4
  %19 = call i32 @test_recv(i32 %18, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %20 = load i32, i32* %2, align 4
  %21 = call i32 @test_send(i32 %20, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %22 = load i32, i32* %3, align 4
  %23 = call i32 @test_recv(i32 %22, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @test_close(i32 %24)
  %26 = load i32, i32* %2, align 4
  %27 = call i32 @test_close(i32 %26)
  ret i32 0
}

declare dso_local i32 @test_socket(i32, i32) #1

declare dso_local i32 @test_bind(i32, i32) #1

declare dso_local i32 @test_connect(i32, i32) #1

declare dso_local i32 @test_send(i32, i8*) #1

declare dso_local i32 @test_recv(i32, i8*) #1

declare dso_local i32 @test_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
